# AutoPC

./: .gitignore  GUI.py  I2_000055.pgm  README.md  README.txt  Stereovision Tutorial.docx  Tutorial.txt  library  library.C  ~$ereovision Tutorial.docx
Installation/: Install_Instructions.txt  install-opencv.sh
samples/: CMakeLists.txt  I1_000055.pgm  I1_000080.pgm  I1_000879.pgm  I2_000080.pgm  I2_000879.pgm  library  library.C  pcl_visualizer_demo  populate  populate.C
